# test-ch32v003

./: .gitignore  .gitmodules  README.md
20230729-adc_multiple-ch32v003fun/: Makefile  README.md
20230729-i2c_slave-ch32v003fun/: Makefile  README.md
20230811-i2c_slave-mountriver/: .template
20230830-i2c_master-ch32v003fun/: i2c_master.c
20240929-lchika-arduino/: 20240929-lchika-arduino.ino
20240929-lchika-ch32003fun/: Makefile  lchika.c
20240929-lchika-wchsdk/: README.md  platformio.ini
20241123-lchika-ch32v003fun/: firmware.c
20241124-flash-write/: firmware.c
20241124-option-bytes/: README.md  firmware.c
20241130_i2c-slave-ch32v003fun/: README.md  firmware.c
20241130_nrset-swdio-to-gpio/: README.md  firmware.c
20241230-rust/: Cargo.toml
20241230-rust-1/: README.md
20241230-rust-2/: Cargo.toml  README.md
20241230-rust-2/.cargo/: config.toml
20250224-sleep_mode/: README.md
20250224-stanby_mode_blink/: README.md
20250301-v002-blink_with_stanby_mode/: .cproject  .template  CH32V002J4M6.launch  CH32V002J4M6.wvproj
20250314-v006-blink/: .cproject  .template  CH32V006K8U6.launch  CH32V006K8U6.wvproj
20250322-timer_dma-wch_sdk/: README.md  platformio.ini
20250414-mcp/: platformio.ini
20250419-mcp_ch32fun/: Makefile  template.c
20250420-ch32fun-function-set/: .editorconfig  .gitignore  Makefile  README.md  template.c
20250420-ch32fun-standalone/: README.md
adc_multiple-ch32v003fun/: adc_multiple.c
adc_multiple-wchsdk/: README.md  platformio.ini
ch32v003fun/: README.md  i2c_slave.c  i2c_slave.h
i2c_slave-wchsdk/: README.md  (+1 more)
(+42 files in other folders)
